fix: [#7] MoviePoster - 상세설명 텍스트가 Overflow 됐을 때 스크롤되는 설정 추가

--- a/Web 2주차/미션2 - Movie Poster/styles/movieDetail.css
+++ b/Web 2주차/미션2 - Movie Poster/styles/movieDetail.css
@@ -19,5 +19,9 @@
 }
 
 #overview {
+    height: 270px;
     font-size: 13px;
+    overflow: scroll;
+    word-break: break-all;
+    white-space: normal;
 }
